# tg_bot_pyrogram

./: .gitignore  Dockerfile  create_session.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: create-zip.yml
data/: config.py  downloaded_tags.txt  last_used_tags.txt
handlers/: user_commands.py
keyboards/inline/: inline_kb.py
utils/: session_manager.py  utils.py
