[tool.poetry]
name = "tg-bot-pyrogram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
aiogram = "^3.13.1"
environs = "^11.0.0"
tgcrypto = "^1.2.5"
gspread = "^6.1.2"
oauth2 = "^1.9.0.post1"
oauth2client = "^4.1.3"
gspread-formatting = "^1.2.0"
schedule = "^1.2.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
